Add token validation and jwt blacklist service; add log out and test auth endpoints; add debug in-memory cache

--- a/src/SourceName.Api/appsettings.json
+++ b/src/SourceName.Api/appsettings.json
@@ -1,5 +1,7 @@
 {
   "Authentication": {
+    "Issuer": "SourceName-api",
+    "TokenLifetimeInSeconds": 1800,
     "TokenSecret": "SUPERSECRETTOKENKEYSHHHHH"
   },
   "Database": {
