--- a/src/SourceName.Application.Test/SourceName.Application.Test.csproj
+++ b/src/SourceName.Application.Test/SourceName.Application.Test.csproj
@@ -7,10 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.15.2" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SourceName.Application\SourceName.Application.csproj" />
+    <ProjectReference Include="..\SourceName.Domain\SourceName.Domain.csproj" />
   </ItemGroup>
 
 </Project>
