--- a/src/SourceName.Infrastructure.Test/SourceName.Infrastructure.Test.csproj
+++ b/src/SourceName.Infrastructure.Test/SourceName.Infrastructure.Test.csproj
@@ -7,10 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.15.2" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SourceName.Infrastructure\SourceName.Infrastructure.csproj" />
+    <ProjectReference Include="..\SourceName.Application\SourceName.Application.csproj" />
   </ItemGroup>
 
 </Project>
