--- a/src/SourceName.Infrastructure/SourceName.Infrastructure.csproj
+++ b/src/SourceName.Infrastructure/SourceName.Infrastructure.csproj
@@ -5,9 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
+    <!--#if(UsePg)-->
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0" />
+    <!--#elseif(UseRaven)-->
     <PackageReference Include="RavenDB.Client" Version="4.2.103" />
     <PackageReference Include="RavenDB.DependencyInjection" Version="3.1.0" />
+    <!--#endif-->
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.6.0" />
     <PackageReference Include="System.Security.Claims" Version="4.3.0" />
   </ItemGroup>
