Conditional appsettings values and postgres module fix

--- a/src/SourceName.Api/appsettings.json
+++ b/src/SourceName.Api/appsettings.json
@@ -4,6 +4,11 @@
     "TokenLifetimeInSeconds": 1800,
     "TokenSecret": "SUPERSECRETTOKENKEYSHHHHH"
   },
+  //#if (UsePg)
+  "ConnectionStrings": {
+      "SourceNameDb": "Host=localhost;Port=5432;Database=SourceName;Username=user;Password=password"
+  },
+  //#endif
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,9 +16,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  //#if (UseRaven)
   "RavenSettings": {
     "Urls": ["http://localhost:32768"],
     "DatabaseName": "SourceName"
   },
+  //#endif
   "AllowedHosts": "*"
 }
