Some cleanup and refactoring

--- a/src/SourceName.Api/appsettings.json
+++ b/src/SourceName.Api/appsettings.json
@@ -4,7 +4,12 @@
     "TokenLifetimeInSeconds": 1800,
     "TokenSecret": "SUPERSECRETTOKENKEYSHHHHH"
   },
-  //#if (UsePg)
+  //#if (UseRaven)
+  "RavenSettings": {
+    "Urls": ["http://localhost:32768"],
+    "DatabaseName": "SourceName"
+  },
+  //#else
   "ConnectionStrings": {
       "SourceNameDb": "Host=localhost;Port=5432;Database=SourceName;Username=user;Password=password"
   },
@@ -16,11 +21,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  //#if (UseRaven)
-  "RavenSettings": {
-    "Urls": ["http://localhost:32768"],
-    "DatabaseName": "SourceName"
-  },
-  //#endif
   "AllowedHosts": "*"
 }
